# pinging

./: .editorconfig  Dockerfile  README.md
.github/workflows/: build-docker.yml  frontend.yml  rust.yml
backend/: Cargo.toml  build.rs
backend/src/: https_redirect.rs  main.rs  metrics.rs  static_files.rs  webrtc.rs  www_redirect.rs
configs/: .gitignore  development.env  docker.env  pinging.service  production.env
frontend/: .gitignore  about.html  dark_mode.ts  index.css  index.html  index.ts  locations.html  not-found.html  package-lock.json  package.json  site.webmanifest  tsconfig.json
scripts/: arch_server_initialization  build  check_formatting  copy_certs  deploy  gcp_new_instance  letsencrypt_renewal  run_locally  server_initialization.txt  vultr_new_instance
