[package]
name = "pinging"
version = "0.0.0"
authors = ["Ben Hansen <pinging@benhansen.io>"]
edition = "2021"
license = "Apache-2.0"

[profile.release]
debug = true

[dependencies]
anyhow = "1.0"
axum = { version = "0.5.4", features = ["http1"] }
axum-server = { version = "0.4", features = ["tls-rustls"] }
env_logger = "0.9"
futures = "0.3"
metrics = "0.19"
metrics-exporter-prometheus = "0.10"
once_cell = "1.5.2"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
tower = { version = "0.4", features = ["timeout"] }
tower-http = { version = "0.3.2", features = ["fs", "trace", "cors", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webrtc-unreliable = "0.5"