[package]
name = "pinging"
version = "0.0.0"
authors = ["Ben Hansen <pinging@benhansen.io>"]
edition = "2021"
license = "Apache-2.0"

[profile.release]
debug = true

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["http1"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
env_logger = "0.11"
futures = "0.3"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
metrics-process = "2.1"
once_cell = "1.5.2"
public-ip = "0.2.2"
serde = { version = "1.0.156", features = ["derive"] }
tokio = { version = "1.0", features = ["rt-multi-thread"] }
tower = { version = "0.4", features = ["timeout"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webrtc-unreliable = { version = "0.6", features = ["tokio"] }
